--- a/style.css
+++ b/style.css
@@ -1,14 +1,73 @@
 html{
-    background: linear-gradient(#fafa06, #d41662);
+    background: linear-gradient(to bottom left,rgb(218, 2, 218), yellow, purple, white);
     font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-size: 30px;
-    background-repeat: no-repeat;
+    min-height: 929px;
+
+}
+.container{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    min-height: 600px;
+    justify-content: center;
+}
+
+h1{
+    display: flex;
+    align-items: flex-start;
+    justify-content: center;
 }
 
 
 button{
+    width: fit-content;;
     font-size: 40px;
     box-shadow: 0 10px 10px 0px;
-    margin: 10px;
+    margin: 20px;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
+p, article {
+    margin: 1em;
+    max-width: 600px;
+    word-wrap: break-word;
+}
+
+@media only screen and (max-width: 1300px) {
+    html{
+        min-height: 569px;
+        font-size: 24px;
+    }
+
+    button{
+        font-size: 24px;
+    }
+
+    .container{
+        min-height: 400px;
+    }
+
+}
+
+@media only screen and (max-width: 800px) {
+    html{
+        min-height: 844px;
+        font-size: 27px;
+    }
+
+    h1{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+
+    button{
+        font-size: 30px;
+    }
+
+    .container{
+        min-height: 600px;
+    }
+
+}
+
